--- a/src/ui/radix/select/select.module.scss
+++ b/src/ui/radix/select/select.module.scss
@@ -1,7 +1,36 @@
 .selectContent {
-  background-color: white;
+  // background-color: white;
   border-radius: 6px;
   box-shadow:
     0px 10px 38px -10px rgba(22, 23, 24, 0.35),
     0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+}
+
+.selectTrigger {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  padding: 0 15px;
+  font-size: 13px;
+  line-height: 1;
+  height: 35px;
+  gap: 5px;
+  background-color: white;
+  color: violet;
+  box-shadow: 0 2px 10px black;
+}
+
+
+.selectItem {
+  font-size: 13px;
+  line-height: 1;
+  color: violet;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  height: 25px;
+  padding: 0 35px 0 25px;
+  position: relative;
+  user-select: none;
 }
