--- a/src/ui/design-system/select/select.module.scss
+++ b/src/ui/design-system/select/select.module.scss
@@ -1,5 +1,6 @@
 .selectContent {
-  // background-color: white;
+  padding: 10px;
+  background-color: rgba(10, 10, 10, 0.8);
   border-radius: 6px;
   box-shadow:
     0px 10px 38px -10px rgba(22, 23, 24, 0.35),
@@ -33,4 +34,11 @@
   padding: 0 35px 0 25px;
   position: relative;
   user-select: none;
+
+  &[data-highlighted] {
+    outline: none;
+    background-color: rgba(11, 32, 52, 0.9);
+
+    color: rgb(210, 227, 255);
+  }
 }
